--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "route.js ========",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/.bin/webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,10 @@
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "webpack": "^3.4.1",
+    "babel-loader": "^7.1.1",
+    "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
