--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   },
   "homepage": "https://github.com/bambii7/route.js",
   "devDependencies": {
-    "webpack": "^3.4.1",
-    "babel-loader": "^7.1.1",
     "babel-core": "^6.25.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "jasmine": "^2.7.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.0",
+    "webpack": "^3.4.1"
   }
 }
