--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "route.js ========",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "karma start karma.conf.js",
     "build": "./node_modules/.bin/webpack --config webpack.config.js",
     "karma": "karma start karma.conf.js"
   },
